--- a/css/tasks/style.css
+++ b/css/tasks/style.css
@@ -1,83 +1,100 @@
-*{
-	margin: 0;
-	padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-body{
-	background-color: #e3f2fd;
+body {
+    background-color: #e3f2fd;
+    background-image: url(../../images/back.jpg);
+    -webkit-background-size: 256px;
+    background-size: 256px;
 }
 
-.contentWrapper{
-	margin-top: 50px;
+.contentWrapper {
+    margin-top: 50px;
+    background-color: #fff;
 }
 
-.content{
-	padding: 20px 30px;
-	overflow-x: auto;
-	font-size: 16px;
+.content {
+    padding: 20px 30px;
+    overflow-x: auto;
+    font-size: 16px;
 }
 
-input.correct{
-	color: #fff;
-	background-color: #81c784!important;
+input.correct {
+    color: #fff;
+    background-color: #81c784 !important;
 }
 
-input.wrong{
-	color: #fff!important;
-    border-color: red!important;
-    background: #e53935!important;
+input.wrong {
+    color: #fff !important;
+    border-color: red !important;
+    background: #e53935 !important;
 }
 
-.content p{
-	font-size: 16px;
+.content p {
+    font-size: 16px;
 }
 
-.esepTitle{
-	font-size: 26px;
-	text-align: center;
+.esepTitle {
+    font-size: 26px;
+    text-align: center;
+    padding: 25px;
 }
 
-.blockTitle{
-	font-size: 26px;
+.esepTitle::first-letter {
+    text-transform: capitalize;
 }
 
-.clearB{
-	clear: both;
+.blockTitle {
+    font-size: 26px;
 }
 
-.answers{
-	display: none;
-	margin-top: 30px;
+.clearB {
+    clear: both;
 }
 
-.steps{
-	margin-bottom: 5px;
+.answers {
+    display: none;
+    margin-top: 30px;
 }
 
-.solutionImg{
-	vertical-align: middle;
+.steps {
+    margin-bottom: 5px;
 }
 
-.solutionText{
-	display: inline-block;
+.solutionImg {
+    vertical-align: middle;
 }
 
-.infl{
-	display: inline-flex;
+.solutionText {
+    display: inline-block;
 }
 
-.primechanie{
-	margin-top: 10px;
+.infl {
+    display: inline-flex;
 }
 
-.user_input_field{
-	display: none;
+.primechanie {
+    margin-top: 10px;
 }
 
-.user_input_field.active{
-	display: block;
+.user_input_field {
+    display: none;
 }
 
-.italic{
-	font-style: italic;
+.user_input_field.active {
+    display: block;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.dp {
+    display: block;
+}
+
+.tabuKerek {
+    margin-left: 20px;
 }
