--- a/nodes/Esep6/Esep/assets/css/style.css
+++ b/nodes/Esep6/Esep/assets/css/style.css
@@ -1,18 +1,135 @@
-.droppable-item{
+.droppable-item {
     width: 100%;
-    min-height: 50px !important;
-    z-index: 10;
-    border: 1px solid #000;
-    text-align: center;
     line-height: 45px;
+    position: relative;
+    text-align: center;
+    border: 1px solid #000;
+    min-height: 50px !important;
 }
 
-.droppable-item, .draggable{
+.droppable-item, .draggable {
     margin-bottom: 10px;
 }
 
+.parent:before, .parent:after {
+    width: 2px;
+    top: 55%;
+    left: -30%;
+    content: " ";
+    height: 125px;
+    position: absolute;
+    background-color: #000;
+    transform: rotate(60deg);
+}
 
-.ta{
-    text-align: center;
-    margin-bottom: 15px;
+.parent:after {
+    left: auto;
+    right: -30%;
+    transform: rotate(-60deg);
+}
+
+.second-row {
+    margin-top: 70px;
+}
+
+.third-row {
+    margin-top: 70px;
+}
+
+.third-row .droppable-item::before, .droppable-item::after {
+    content: " ";
+    position: absolute;
+}
+
+.third-row .droppable-item::before {
+    width: 2px;
+    height: 75px;
+    bottom: calc(100% + 5px);
+    background-color: #000;
+}
+
+.first-col .s3:first-child .droppable-item::before {
+    right: -30px;
+    height: 100px;
+    transform: rotate(45deg);
+    bottom: calc(100% + -10px);
+}
+
+.first-col .s3:nth-child(2) .droppable-item::before {
+    transform: rotate(15deg);
+    bottom: calc(100% + 5px);
+    left: 75%;
+}
+
+.first-col .s3:nth-child(3) .droppable-item::before {
+    transform: rotate(-15deg);
+    left: 25%;
+}
+
+.first-col .s3:last-child .droppable-item::before {
+    left: -30px;
+    height: 100px;
+    transform: rotate(-45deg);
+    bottom: calc(100% + -10px);
+}
+
+.second-col .s3:first-child .droppable-item::before {
+    right: -30px;
+    height: 100px;
+    transform: rotate(45deg);
+    bottom: calc(100% + -10px);
+}
+
+.second-col .s3:last-child .droppable-item::before {
+    left: -30px;
+    height: 100px;
+    transform: rotate(-45deg);
+    bottom: calc(100% + -10px);
+}
+
+.bottom-content {
+    padding: 25px 0;
+    min-height: 45px;
+    border: 2px dashed #000;
+}
+
+.bottom-content .droppable-item:before, .bottom-content .droppable-item:after {
+    position: absolute;
+    content: " ";
+}
+
+.bottom-content .droppable-item:before {
+    width: 2px;
+    height: 50px;
+    background-color: #000;
+    left: 50%;
+    margin-left: -1px;
+    bottom: 100%;
+}
+
+.bottom-content .droppable-item:after {
+    bottom: 100%;
+    top: auto;
+    left: 50%;
+    margin-left: -7px;
+    border-style: solid;
+    border-width: 16px 7px 0 7px;
+    border-color: #000 transparent transparent transparent;
+    border-color: #000 transparent transparent transparent;
+}
+
+.third-row .droppable-item, .draggable{
+    min-height: 100px!important;
+}
+
+.droppable-item img {
+    vertical-align: middle;
+}
+
+.draggable{
+    margin-right: 5px;
+}
+
+#ansList{
+    padding: 0 35px;
 }
