--- a/nodes/Esep4/Esep/assets/css/style.css
+++ b/nodes/Esep4/Esep/assets/css/style.css
@@ -1,254 +1,25 @@
-.firstline {
-    position: relative;
-    margin-top: 55px;
-}
-
-.firstline:before, .firstline:after {
-    content: " ";
-    position: absolute;
-}
-
-.firstline:before {
-    background-color: #000;
-    left: 0;
-    width: 50px;
-    height: 2px;
-    bottom: 0;
+.droppable-item{
     width: 100%;
-}
-
-.firstline:after {
-    border-style: solid;
-    border-width: 7px 0px 7px 16px;
-    border-color: transparent transparent transparent #000;
-    border-color: transparent transparent transparent #000;
-    right: -4px;
-    bottom: -6px;
-}
-
-.draggable {
-    float: left;
-    margin-right: 20px;
-    margin-bottom: 10px;
-    min-height: 75px !important;
-}
-
-.droppable-item, .draggable {
-    padding: 5px 15px;
-    width: 150px;
-}
-
-.headline {
-    width: 100%;
-    text-align: center;
-}
-
-.center-content {
-    width: 100%;
-    padding: 25px 5px;
-    border: 1px dotted #000;
-}
-
-.center-content .row {
-    margin: 0;
-}
-
-.center-content:after {
-    clear: both;
-    display: table;
-    content: " ";
-}
-
-.droppable-item {
+    z-index: 10;
     border: 1px solid #000;
     text-align: center;
-    padding: 15px 15px !important;
-    position: relative;
-    height: 65px;
+    line-height: 45px;
 }
 
-.droppable-item:before, .droppable-item:after {
-    content: " ";
-    position: absolute;
+.droppable-item, .draggable{
+    margin-bottom: 10px;
+    min-height: 125px !important;
 }
 
-.droppable-item:before {
-    background-color: #000;
-    left: 100%;
-    top: 50%;
-    margin-top: -1px;
-    height: 2px;
-    width: 30%;
+.ta{
+    text-align: center;
+    margin-bottom: 15px;
 }
 
-.droppable-item:after {
-    border-style: solid;
-    border-width: 7px 0px 7px 16px;
-    border-color: transparent transparent transparent #000;
-    border-color: transparent transparent transparent #000;
-    left: 125%;
-    top: 50%;
-    margin-top: -7px;
+.headline{
+    min-height: 100px;
 }
 
-.second-item {
-    margin-top: 45px;
-}
-
-.second-item:before {
-    top: auto;
-    left: auto;
-    bottom: auto;
-    right: auto;
-    width: 2px;
-    height: 40px;
-    left: 50%;
-    margin-left: -1px;
-    bottom: 100%;
-}
-
-.second-item:after {
-    top: auto;
-    left: 50%;
-    margin-left: -7px;
-    border-style: solid;
-    bottom: calc(100% + 40px);
-    border-width: 0 7px 16px 7px;
-    border-color: transparent transparent #000 transparent;
-    border-color: transparent transparent #000 transparent;
-}
-
-.first-row-outer {
-    position: relative;
-}
-
-.third-item {
-    position: absolute;
-    right: 45px;
-    bottom: 0;
-}
-
-.third-item::before {
-    height: 100px;
-    width: 2px;
-    top: auto;
-    left: 50%;
-    margin-left: -1px;
-    bottom: 100%;
-}
-
-.third-item::after {
-    bottom: 100%;
-    top: auto;
-    left: 50%;
-    margin-left: -7px;
-    border-style: solid;
-    border-width: 16px 7px 0 7px;
-    border-color: #000 transparent transparent transparent;
-    border-color: #000 transparent transparent transparent;
-}
-
-.center-last:before {
-    width: 110%;
-}
-
-.center-last:after {
-    left: 210%;
-}
-
-.second-row-outer{
-    position: relative;
-}
-
-.second-row-outer::before {
-    width: 2px;
-    height: 125px;
-    position: absolute;
-    left: 40%;
-    bottom: 100%;
-    content: " ";
-    background-color: #000;
-}
-
-.second-row-outer::after {
-    position: absolute;
-    top: auto;
-    left: 40%;
-    margin-left: -6px;
-    border-style: solid;
-    bottom: calc(100% + 125px);
-    border-width: 0 7px 16px 7px;
-    border-color: transparent transparent #000 transparent;
-    border-color: transparent transparent #000 transparent;
-}
-
-.second-row-outer .firstline:before {
-    background-color: #000;
-    left: 50%;
-    top: 50%;
-    margin-top: -1px;
-    margin-left: -1px;
-    height: 2px;
-    bottom: auto;
-    width: 50%;
-}
-
-.second-row-outer .firstline:after {
-    border-width: 7px 16px 7px 0px;
-    border-color: transparent #000 transparent transparent;
-    border-color: transparent #000 transparent transparent;
-    left: 50%;
-    top: 50%;
-    margin-top: -7px;
-    margin-left: -1px;
-    right: auto;
-    bottom: auto;
-}
-
-.second-row-outer .center-content .droppable-item:before {
-    left: auto;
-    right: 100%;
-    top: 50%;
-    margin-top: -1px;
-    height: 2px;
-    width: 30%;
-}
-
-.second-row-outer .center-content .droppable-item:after {
-    border-width: 7px 16px 7px 0px;
-    border-color: transparent #000 transparent transparent;
-    border-color: transparent #000 transparent transparent;
-    right: 125%;
-    left: auto;
-    top: 50%;
-    margin-top: -7px;
-}
-
-.second-row-outer .second.firstline:before {
-    bottom: calc(100% + 10px);
-    top: auto;
-    width: 100%;
-    left: 1%;
-}
-
-.second-row-outer .second.firstline:after {
-    top: auto;
-    bottom: calc(100% + 10px);
-    margin-bottom: -6px;
-    left: 0;
-}
-
-.second-row-outer .second.firstline p::before {
-    content: " ";
-    position: absolute;
-    width: 2px;
-    height: 50px;
-    background-color: #000;
-    bottom: calc(100% + 10px);
-    left: 100%;
-}
-
-.droppable-item,.draggable{
-    min-height: auto!important;
-    height: 65px!important;
+.draggable{
+    padding: 0 5px;
 }
